correccion columnas database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,5 @@ spring.jpa.show-sql=true
 
 #configuracion de hibernate
 spring.jpa.properties.hibernate.format_sql = true
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 spring.jpa.open-in-view=false
